--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,8 @@ activityCompose = "1.10.0"
 composeBom = "2024.04.01"
 androidx-navigation-compose = "2.7.7" # 최신 버전
 androidx-material3 = "1.2.0"
-composeUi = "1.6.2" # Compose UI 개별 버전 추가 (선택 사항)
+composeUi = "1.6.2"
+playServicesFitness = "21.2.0" # Compose UI 개별 버전 추가 (선택 사항)
 
 
 [libraries]
@@ -29,6 +30,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "composeUi" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
 androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-material3" }
+play-services-fitness = { group = "com.google.android.gms", name = "play-services-fitness", version.ref = "playServicesFitness" }
 
 
 [plugins]
