--- a/gradle.properties
+++ b/gradle.properties
@@ -24,5 +24,5 @@ android.nonTransitiveRClass=true
 
 android.defaults.buildfeatures.buildconfig=true
 
-google.cliend.id=${google.client.id}
+google.client.id=${google.client.id}
 base.url=${base.url}
