--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,4 @@ android.defaults.buildfeatures.buildconfig=true
 
 google.client.id=${google.client.id}
 base.url=${base.url}
+google.maps.api.key=${google.maps.api.key}
